EmbriaoIsiLanguage/IsiLang.g4
grammar IsiLang;

@header {
	import br.com.professorisidro.isilanguage.datastructures.IsiSymbol;
	import br.com.professorisidro.isilanguage.datastructures.IsiVariable;
	import br.com.professorisidro.isilanguage.datastructures.IsiSymbolTable;
	import br.com.professorisidro.isilanguage.exceptions.IsiSemanticException;
	import br.com.professorisidro.isilanguage.ast.IsiProgram;
	import br.com.professorisidro.isilanguage.ast.AbstractCommand;
	import br.com.professorisidro.isilanguage.ast.CommandLeitura;
	import br.com.professorisidro.isilanguage.ast.CommandEscrita;
	import br.com.professorisidro.isilanguage.ast.CommandAtribuicao;
	import br.com.professorisidro.isilanguage.ast.CommandDecisao;
	import java.util.ArrayList;
	import java.util.Stack;
}

@members {
	private int _tipo;
	private String _varName;
	private String _varValue;
	private IsiSymbolTable isisymboltable = new IsiSymbolTable();
	private IsiSymbol symbol;
	private IsiProgram program = new IsiProgram();
	private ArrayList<AbstractCommand> curThread; // = new ArrayList<AbstractCommand>();
	private Stack<ArrayList<AbstractCommand>> stack = new Stack<ArrayList<AbstractCommand>>();
	
	private String _readID;
	private String _writeID;
	private String _exprID;
	private String _exprContent;
	private String _exprDecision;
	private ArrayList<AbstractCommand> listaTrue;
	private ArrayList<AbstractCommand> listaFalse;
	
	public void verificaID(String id) {
		if (!isisymboltable.exists(id)) {
			throw new IsiSemanticException("Symbol " + id + " not declared.");
		}
	}
	
	public void exibeComandos() {
		for (AbstractCommand c: program.getComandos()) {
			System.out.println(c);
		}
	}
	
	public void generateCode() {
		program.generateTarget();
	}
}

prog	:	'programa'	decl bloco	'fimprog;'
			{
				program.setVarTable(isisymboltable);
				program.setComandos(stack.pop());
			}
		;
		
decl	:	(declaravar)+
		;

declaravar	:	tipo	ID	{
							_varName = _input.LT(-1).getText();
							_varValue = null;
							symbol = new IsiVariable(_varName, _tipo, _varValue);
							
							if (!isisymboltable.exists(_varName)){
								System.out.println("Simbolo adicionado " + symbol);
								isisymboltable.add(symbol);								
							}
							else {
								throw new IsiSemanticException("Symbol " + _varName + " already declared");
							}
							} 
							( VIR
								ID	{
									_varName = _input.LT(-1).getText();
									_varValue = null;
									symbol = new IsiVariable(_varName, _tipo, _varValue);
									if (!isisymboltable.exists(_varName)){
										System.out.println("Simbolo adicionado " + symbol);
										isisymboltable.add(symbol);								
									}
									else {
										throw new IsiSemanticException("Symbol " + _varName + " already declared");
									}
									}
							)* SC
			;
			
tipo	:	'numero'	{ _tipo = IsiVariable.NUMBER; }
		|	'texto'		{ _tipo = IsiVariable.TEXT; }
		;

bloco	:	{
				curThread = new ArrayList<AbstractCommand>();
				stack.push(curThread);
			}
			(cmd)+
		;

cmd		:	cmdleitura	{ System.out.println("Reconheci um comando de leitura");}
		|	cmdescrita	{ System.out.println("Reconheci um comando de escrita");}
		|	cmdattrib	{ System.out.println("Reconheci um comando de atribuicao");}
		|	cmdselecao
		;

cmdleitura	:	'leia'	AP	
						ID	{
							System.out.println("ID = " + _input.LT(-1).getText());
							verificaID(_input.LT(-1).getText());
							_readID = _input.LT(-1).getText();
						}
						FP	
						SC
						
						{
							IsiVariable var = (IsiVariable)isisymboltable.get(_readID);
							CommandLeitura cmd = new CommandLeitura(_readID, var);
							stack.peek().add(cmd);
						}
		;

cmdescrita	:	'escreva'	AP ID	{
										verificaID(_input.LT(-1).getText());
										_writeID = _input.LT(-1).getText();
									} 
							FP
							SC
							
							{
								CommandEscrita cmd = new CommandEscrita(_writeID);
								stack.peek().add(cmd);
							}
		;	

cmdattrib	:	ID	{
						verificaID(_input.LT(-1).getText());
						_exprID = _input.LT(-1).getText(); 
					}
				ATTR {
					_exprContent = "";
				}
				expr
				SC	{
					CommandAtribuicao cmd = new CommandAtribuicao(_exprID, _exprContent);
					stack.peek().add(cmd);
				}
		;

cmdselecao	:	'se'	AP
						ID		{ _exprDecision = _input.LT(-1).getText(); }
						OPREL	{ _exprDecision += _input.LT(-1).getText(); }
						(ID	| NUMBER)		{ _exprDecision += _input.LT(-1).getText(); }
						FP
						ACH
						{ 
							curThread = new ArrayList<AbstractCommand>();
							stack.push(curThread);
						}
						(cmd)+
						FCH
						{
							listaTrue = stack.pop();
						}
						
				('senao' ACH
					{ 
						curThread = new ArrayList<AbstractCommand>();
						stack.push(curThread);
					}
					(cmd)+
					FCH
					{
						listaFalse = stack.pop();
						CommandDecisao cmd = new CommandDecisao(_exprDecision, listaTrue, listaFalse);
						stack.peek().add(cmd);
					}
				)?
			;

expr	:	termo	(OP {
							_exprContent += _input.LT(-1).getText();
						} termo)*
		;

termo	:	ID	{
					verificaID(_input.LT(-1).getText());
					_exprContent += _input.LT(-1).getText();
				}
				|
				NUMBER	{
					_exprContent += _input.LT(-1).getText();
				}
		;
		
AP	:	'('
		;
		
FP	:	')'
		;
		
SC	:	';'
		;
		
OP	:	'+' | '-' | '*' | '/'
		;
		
ATTR	:	'='
		;
		
VIR		:	','
		;
		
ACH		:	'{'
		;

FCH		:	'}'
		;
		
OPREL	:	'>' | '<' | '>=' | '<=' | '==' | '!='
		;
		
ID		:	[a-z] ([a-z] | [A-Z] | [0-9])*
		;

NUMBER	:	[0-9] + ('.' [0-9]+)?
		;
		
WS		:	(' ' | '\t' | '\n' | '\r') -> skip;
